Attempt to fix Navigation toggle button positioning on Safari

--- a/src/components/MiniSideBar/SideBarStyle.scss
+++ b/src/components/MiniSideBar/SideBarStyle.scss
@@ -14,8 +14,8 @@
     }
 
     button {
-        margin-left: 0.1em;
-        margin-right: 0.1em;
+        margin-left: 5%;
+        margin-right: 5%;
         margin-top: 1em;
         border: none;
         background: none;
